--- a/Netfloox/app/templates/home.html
+++ b/Netfloox/app/templates/home.html
@@ -6,6 +6,76 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+    <style>
+        @function makelongshadow($length,$angle) {
+          $val: 0px 0px transparent;
+          @for $i from 1 through $length {
+            $val: #{$val}, #{$i}px #{$i*$angle}px #aaa;
+          }
+          @return $val;
+        }
+      
+        @import url('https://fonts.googleapis.com/css?family=Roboto:700,900');
+      
+        body {
+          background: radial-gradient(#fff, #aaa);
+          background-size: 100vw 100vh; 
+          overflow: hidden;
+          padding-top: 40vh;
+        }
+      
+        .txt {
+          text-align: center;
+          font-family: 'Bebas Neue', sans-serif;
+          font-size: 12vmin;
+          font-weight: 700;
+          animation: netflix_style 3.5s infinite;
+          outline: none;
+          white-space: nowrap;
+        }
+      
+        @keyframes netflix_style {
+          0% {
+            text-shadow: makelongshadow(100,1);
+            color:#f3f3f3;
+            transform: scale(1.5, 1.5);
+          }
+          10% {
+            text-shadow: makelongshadow(100,1.5);
+            color:#f3f3f3;
+            transform: scale(1.5, 1.5);
+          }
+          15% {
+            color:#f3f3f3;
+          }
+          20% {    
+            color:#e90418;
+            text-shadow: none;
+            transform: scale(1.1, 1.1);
+          }
+          75% {
+            opacity: 1;
+          }
+          80% {
+            opacity: 0;    
+            color:#e90418;
+            transform: scale(0.85, 0.9);
+          }
+      
+          100% {
+            opacity: 0;
+          }
+        }
+      </style>
+      
+      <div class="txt" contenteditable="true">
+        NETFLOOX
+      </div>
+      
+    
+    <div style="padding-left:16px">
+      <img src="{% static 'image-removebg-preview.png' %}">
+    </div>
 <style>
 
 * {box-sizing: border-box;}
@@ -85,20 +155,17 @@ body {
 }
 </style>
 <div class="topnav">
-  <a class="active" href="#home">Accueil</a>
-  <a href="#about">Analyse</a>
-  <a href="#contact">...</a>
+  <a class="active" href="">Accueil</a>
+  <a href="analyse">Analyse</a>
+  <a href="prediction">Prédiction</a>
   <div class="search-container">
     <form action="/action_page.php">
-      <input type="text" placeholder="Rechercher..." name="search">
+      <input type="text" placeholder="Rechercher..." name="search" style="width: 1700px; height: 40px;">
       <button type="submit"><i class="fa fa-search"></i></button>
     </form>
   </div>
 </div>
 
-<div style="padding-left:16px">
-  <img src="{% static 'image-removebg-preview.png' %}">
-</div>
 
 </body>
 </html>
