ajout design et % pour recommendation

--- a/Netfloox/app/templates/analyses.html
+++ b/Netfloox/app/templates/analyses.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Analyse</title>
+    <title>Analyses</title>
 </head>
 <body>
-    <h1>Analyse</h1>
-    <p>Analyse</p>
+    <h1>Analyses</h1>
+    <p>Analyses</p>
 </body>
 </html>
