--- a/Netfloox/app/templates/home.html
+++ b/Netfloox/app/templates/home.html
@@ -157,7 +157,7 @@ body {
 </style>
 <div class="topnav">
   <a class="active" href="">Accueil</a>
-  <a href="analyse">Analyse</a>
+  <a href="analyses">Analyse</a>
   <a href="prediction">Prédiction</a>
   <div class="search-container">
     <form action="/action_page.php">
