--- a/Netfloox/app/templates/prediction.html
+++ b/Netfloox/app/templates/prediction.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+  <div class="topnav">
+    <a class="active" href="/">Accueil</a>
+    <a href="analyses">Analyse</a>
+    <a href="prediction">Prédiction</a>
+  </div>
 <head>
     <style>
         /* Style pour le formulaire de recherche */
