--- a/Netfloox/app/templates/prediction.html
+++ b/Netfloox/app/templates/prediction.html
@@ -1,5 +1,29 @@
 <!DOCTYPE html>
 <html>
+  <style>.topnav {
+    background-color: #333;
+    overflow: hidden;
+  }
+  
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .topnav a.active {
+    background-color: #000000;
+    color: white;
+  }
+  </style>
   <div class="topnav">
     <a class="active" href="/">Accueil</a>
     <a href="analyses">Analyse</a>
