--- a/Netfloox/app/templates/home.html
+++ b/Netfloox/app/templates/home.html
@@ -468,6 +468,11 @@ footer {
     
     <!-- MAIN CONTAINER -->
     <section class="main-container" >
+      <style>
+        #home {
+          color: black;
+        }
+      </style>
       <div class="location" id="home">
           <h1 id="home">En ce moment sur Netfloox</h1>
           <div class="box">
