--- a/Netfloox/app/templates/prediction.html
+++ b/Netfloox/app/templates/prediction.html
@@ -1,8 +1,44 @@
 <!DOCTYPE html>
 <html>
+    <style>.topnav {
+        background-color: #333;
+        overflow: hidden;
+      }
+      
+      .topnav a {
+        float: left;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+      }
+      
+      .topnav a:hover {
+        background-color: #ddd;
+        color: black;
+      }
+      
+      .topnav a.active {
+        background-color: #000000;
+        color: white;
+      }
+      </style>
 <head>
+    <div class="topnav">
+        <a class="active" href="/">Accueil</a>
+        <a href="analyses">Analyse</a>
+        <a href="prediction">Prédiction</a>
+        <a href="score">Score</a>
+      </div>
     <style>
         /* Style pour le formulaire de recherche */
+        :root {
+              --primary: #141414;
+              --light: #F3F3F3;
+              --dark: 	#686868;
+        }
+
         form {
             display: flex;
             flex-direction: row;
@@ -10,10 +46,18 @@
             align-items: center;
             margin-bottom: 20px;
         }
-        
-        body {
-            font-family: 'Bebas Neue', sans-serif;
-            text-align: center;
+
+
+        html, body {
+                    width: 100vw;
+                    min-height: 100vh;
+                    margin: 0;
+                    padding: 0;
+                    background: radial-gradient(#403f3f, #000);
+                    color: var(--light);
+                    font-family: Arial, Helvetica, sans-serif;
+                    box-sizing: border-box;
+                    line-height: 1.4;
         }
         
         label {
@@ -41,7 +85,8 @@
         /* Style pour la liste des films similaires */
         ul {
             list-style: none;
-            padding: 0;
+            padding-top: 100px;
+            color: var(--light) !important;
             margin: 0;
         }
         
@@ -71,7 +116,7 @@
         .ui-autocomplete {
             position: absolute;
             z-index: 9999;
-            background-color: white;
+            background-color: var(--primary);
             border: 1px solid #ccc;
             list-style: none;
             margin: 0;
@@ -84,50 +129,54 @@
         .ui-autocomplete li {
             padding: 5px;
             cursor: pointer;
+            
         }
 
         .ui-autocomplete li:hover {
             background-color: #f2f2f2;
+            color: var(--light);
+        }
+        
+        .netflixLogo {
+          grid-area: nt;
+          object-fit: cover;
+          width: 100px;
+          max-height: 100%;
+          
+          padding-left: 30px;
+          padding-top: 0px;  
+        }
+
+        header {
+          padding: 20px 20px 0 20px;
+          position: fixed;
+          top: 0;
+          display: grid;  
+          grid-gap:5px;
+          grid-template-columns: 1fr 4fr 1fr;
+          grid-template-areas: 
+          "nt mn mn sb . . . "; 
+          width: 100%;
+          margin-bottom: 0px;  
         }
     </style>
     <meta charset="utf-8">
-    <style>.topnav {
-      background-color: #333;
-      overflow: hidden;
-    }
-    
-    .topnav a {
-      float: left;
-      color: #f2f2f2;
-      text-align: center;
-      padding: 14px 16px;
-      text-decoration: none;
-      font-size: 17px;
-    }
-    
-    .topnav a:hover {
-      background-color: #ddd;
-      color: black;
-    }
-    
-    .topnav a.active {
-      background-color: #000000;
-      color: white;
-    }
-    </style>
-    <div class="topnav">
-      <a class="active" href="/">Accueil</a>
-      <a href="analyses">Analyse</a>
-      <a href="prediction">Prédiction</a>
-    </div>
-    <title>Similar Movies</title>
+    <title>Film similaires</title>
 </head>
 <body>
+    <div class="netflixLogo">
+        <br>
+      <a id="logo" href="/"><img src="https://raw.githubusercontent.com/Lorenzo1208/Projet_Netfloox/main/Netfloox/app/static/image-removebg-preview.png" alt="Logo Image"></a>
+    </div>
+  
+    
     <form method="GET">
         <label for="movie">Choisir un film:</label>
         <input id="movie" name="movie">
         <button type="submit">Rechercher</button>
     </form>
+  <br>
+    <br>
 
     <h1>Films similaires à : '{{ liked_movie }}'</h1>
 
@@ -151,7 +200,7 @@
           });
       });
   </script>
-
-  <h4></h4>
+  
 </body>
+
 </html>
