--- a/Netfloox/app/templates/prediction.html
+++ b/Netfloox/app/templates/prediction.html
@@ -134,7 +134,7 @@
 
         .ui-autocomplete li:hover {
             background-color: #f2f2f2;
-            color: var(--light);
+            color: var(--primary);
         }
         
         .netflixLogo {
