ajout poster de fou et css correspondant

--- a/Netfloox/app/templates/prediction.html
+++ b/Netfloox/app/templates/prediction.html
@@ -121,9 +121,10 @@
             list-style: none;
             margin: 0;
             padding: 0;
-            max-height: 200px;
+            max-height: 500px;
             overflow-y: auto;
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+            
         }
 
         .ui-autocomplete li {
@@ -159,6 +160,27 @@
           width: 100%;
           margin-bottom: 0px;  
         }
+
+        input {height: 25px}
+
+        .movie-poster {
+            display: block;
+            margin: 0 auto;
+        }
+        li {
+            text-align: center;
+            font-size: 40px;
+            font-family: 'Bebas Neue', sans-serif;
+        }
+
+        h1 {
+            text-align: center;
+            font-family: 'Bebas Neue', sans-serif;
+        }
+        label {
+            font-family: 'Bebas Neue', sans-serif;
+            font-size: 40px;
+        }
     </style>
     <meta charset="utf-8">
     <title>Film similaires</title>
@@ -177,18 +199,33 @@
     </form>
   <br>
     <br>
-
+    <div style="text-align: center;">
+        {% if poster_url %}
+        <img src="{{ poster_url }}">
+        {% else %}
+        <p>No poster found for this movie.</p>
+        {% endif %}
+    </div>
+    
     <h1>Films similaires à : '{{ liked_movie }}'</h1>
+    
 
     {% if movies %}
     <ul>
         {% for movie in movies %}
-        <li>{{ movie.0 }} ({{ movie.1 }}%)</li>
+            <li>{{ movie.0 }} ({{ movie.1 }}%) 
+                {% if movie.2 %}
+                    <img class="movie-poster" src="{{ movie.2 }}">
+                {% else %}
+                    <p>No poster found for this movie.</p> 
+                {% endif %}
+            </li>
         {% endfor %}
     </ul>
-    {% else %}
+{% else %}
     <p>Pas de films similaires trouvés, essayer de marquer le film en anglais.</p>
-    {% endif %}
+{% endif %}
+
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
