ajout clic netfloox

--- a/Netfloox/app/templates/analyses.html
+++ b/Netfloox/app/templates/analyses.html
@@ -105,7 +105,7 @@ plot
   
 </head>
 <body>
-  <img src="{% static 'image-removebg-preview.png' %}">
+  <a id="logo" href="/"><img src="{% static 'image-removebg-preview.png' %}"></a>
   <h1>Analyses</h1>
     <p> Les données utilisées dans ce projet ont été obtenues à partir du site IMDb (Internet Movie Database), 
       une base de données en ligne qui contient des informations sur les films, les émissions de télévision, 
