--- a/Netfloox/app/templates/home.html
+++ b/Netfloox/app/templates/home.html
@@ -70,7 +70,7 @@
       </style>
       
       <div class="txt" contenteditable="true">
-        <img src="{% static 'image-removebg-preview.png' %}">
+        <img href="/" src="{% static 'image-removebg-preview.png' %}">
       </div>
       
 <style>
