--- a/Netfloox/app/templates/score.html
+++ b/Netfloox/app/templates/score.html
@@ -34,7 +34,7 @@
         <a href="score">Score</a>
       </div>
   <div id="logo">
-  <img src="{% static 'image-removebg-preview.png' %}">
+    <a id="logo" href="/"><img src="{% static 'image-removebg-preview.png' %}"></a>
   </div>
   <style>
   #logo {
