--- a/Netfloox/app/templates/score.html
+++ b/Netfloox/app/templates/score.html
@@ -67,12 +67,15 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      font-size: 30px;
     }
 
     label,
     input {
       margin: 10px 0;
     }
+
+
   </style>
 
   <meta charset="UTF-8">
