--- a/Netfloox/app/templates/recommandation.html
+++ b/Netfloox/app/templates/recommandation.html
@@ -28,7 +28,7 @@
     <div class="topnav">
         <a class="active" href="/">Accueil</a>
         <a href="analyses">Analyse</a>
-        <a href="prediction">Prédiction</a>
+        <a href="recommandation">Recommandation</a>
         <a href="score">Score</a>
       </div>
     <style>
