--- a/Netfloox/app/templates/analyses.html
+++ b/Netfloox/app/templates/analyses.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <style>.topnav {
-    background-color: #333;
+    background-color: #d13636;
     overflow: hidden;
   }
   
