--- a/Netfloox/app/templates/home.html
+++ b/Netfloox/app/templates/home.html
@@ -88,7 +88,7 @@ body {
 
 .topnav {
   overflow: hidden;
-  background-color: #e9e9e9;
+  background-color: #d13636;
 }
 
 .topnav a {
@@ -153,6 +153,8 @@ body {
     border: 1px solid #ccc;  
   }
 }
+
+
 </style>
 <div class="topnav">
   <a class="active" href="">Accueil</a>
@@ -161,8 +163,7 @@ body {
   <a href="score">Score</a>
   <div class="search-container">
     <form action="/action_page.php">
-      <input type="text" placeholder="Rechercher..." name="search" style="width: 1700px; height: 40px;">
-      <button type="submit"><i class="fa fa-search"></i></button>
+      
     </form>
   </div>
 </div>
