--- a/Netfloox/app/templates/recommandation.html
+++ b/Netfloox/app/templates/recommandation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <style>.topnav {
-        background-color: #333;
+        background-color:  #d13636;
         overflow: hidden;
       }
       
