--- a/Netfloox/app/templates/score.html
+++ b/Netfloox/app/templates/score.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <style>.topnav {
-        background-color: #333;
+        background-color:  #d13636;
         overflow: hidden;
       }
       
