formulaire log in

--- a/Netfloox/app/templates/home.html
+++ b/Netfloox/app/templates/home.html
@@ -161,6 +161,7 @@ body {
   <a href="analyses">Analyse</a>
   <a href="recommandation">Recommandation</a>
   <a href="score">Score</a>
+  <a href="login">Log in</a>
   <div class="search-container">
     <form action="/action_page.php">
       
