--- a/Netfloox/app/templates/score.html
+++ b/Netfloox/app/templates/score.html
@@ -32,6 +32,7 @@
         <a href="analyses">Analyse</a>
         <a href="recommandation">Recommandation</a>
         <a href="score">Score</a>
+        <a href="login">Log in</a>
       </div>
   <div id="logo">
     <a id="logo" href="/"><img src="{% static 'image-removebg-preview.png' %}"></a>
@@ -83,7 +84,7 @@
 </head>
 <body>
 <div class="container">
-  <form method="post">
+  <form method="POST">
     {% csrf_token %}
     <label for="title">Titre:</label>
     <input type="text" id="title" name="title">
