--- a/Netfloox/app/templates/analyses.html
+++ b/Netfloox/app/templates/analyses.html
@@ -30,6 +30,7 @@
     <a href="analyses">Analyse</a>
     <a href="recommandation">Recommandation</a>
     <a href="score">Score</a>
+    <a href="login">Log in</a>
   </div>
 <head>
   <style>
