--- a/Netfloox/app/templates/recommandation.html
+++ b/Netfloox/app/templates/recommandation.html
@@ -30,6 +30,7 @@
         <a href="analyses">Analyse</a>
         <a href="recommandation">Recommandation</a>
         <a href="score">Score</a>
+        <a href="login">Log in</a>
       </div>
     <style>
         /* Style pour le formulaire de recherche */
