--- a/Netfloox/app/templates/score.html
+++ b/Netfloox/app/templates/score.html
@@ -76,6 +76,30 @@
       margin: 10px 0;
     }
 
+    .ui-autocomplete {
+      position: absolute;
+      z-index: 9999;
+      background-color: var(--primary);
+      border: 1px solid #ccc;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      max-height: 500px;
+      overflow-y: auto;
+      box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+      
+  }
+
+  .ui-autocomplete li {
+      padding: 5px;
+      cursor: pointer;
+      
+  }
+
+  .ui-autocomplete li:hover {
+      background-color: #f2f2f2;
+      color: var(--primary);
+  }
 
   </style>
 
@@ -106,7 +130,23 @@
     <br>
     <button type="submit">Predict</button>
   </form>
-
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
+  <script>
+    $(function() {
+        var availableDirectors = [
+            {% for director in directors %}
+            "{{ director }}",
+            {% endfor %}
+        ];
+        console.log("Liste des directors:", availableDirectors);
+        $("#director").autocomplete({
+            source: availableDirectors,
+            minLength: 3,
+            delay: 800,
+        });
+    });
+  </script>
   <br>
   <br>
   <br>
